# gdext-generation

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: args.rs  lib.rs
src/args/: icons.rs  mod.rs
src/features/: arch.rs  mod.rs  mode.rs  sys.rs  target.rs
src/gdext/: config.rs  deps.rs  icons.rs  libs.rs  mod.rs
src/gdext/icons/: mod.rs  parser.rs
