[package]
name = "gdext-gen"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Autogenerates a .gdextension file for using Rust to make a Godot GDExtension. It provides all the libraries pathfinding and a way to automatically link the default icons to the new defined classes based on the class they inherit from, and also a way to manually link a specific class with a custom icon."
repository = "https://github.com/sylbeth/gdext-generation"
readme = "README.md"
keywords = ["gamedev", "godot", "gdextension", "gdext"]
categories = ["api-bindings", "game-development"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--document-private-items", "-Zunstable-options", "--generate-link-to-definition"]

[dependencies]
glob = { version = "0.3.1", optional = true }
serde = { version = "1.0.215", features = ["serde_derive"] }
toml = { version = "0.8.19", features = ["preserve_order"] }
chumsky = { version = "0.9.3", optional = true }
toml_edit = { version = "0.22.22", optional = true }
regex = { version = "1.11.1", optional = true }

[features]
default = ["checked_generation", "icons"]
icons = []
find_icons = ["icons", "dep:glob", "dep:regex"]
dependencies = ["dep:toml_edit"]
checked_generation = []
forced_generation = []
